<resources>
    <string name="app_name">CalMeasure</string>
    <string name="title_activity_info_show">Calorie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="weight_fragment_main">WEIGHT</string>
    <string name="height_fragment_main">HEIGHT</string>
    <string name="walking_speed_fragment_main">WALKING SPEED</string>
    <string name="calorie_consumption_fragment_main">CALORIE CONSUMPTION</string>
    <string name="start_fragment_main">START</string>
    <string name="reset_fragment_main">RESET</string>
    <string name="stop_fragment_main">STOP</string>
    <string name="calories_fragemtn_main">CALORIES</string>
    <string name="mh_fragment_main">M/H</string>
    <string name="mile_fragment_main">MILE</string>
    <string name="bpm_fragment_main">BPM</string>
    <string name="ozhr_fragment_main">OZ/HR</string>
    <string name="c_fragment_main">C</string>
    <string name="scan_device_fragment_setting">ScanForDevice</string>
</resources>
