<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itu.edu.embeddedlab.calmeasure.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="#7FFFD4"
            android:layout_weight="1.5"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fragment_main_head_icon"
                    android:layout_width="wrap_content"
                    android:src="@drawable/headicon"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:layout_height="0dp">
                    <TextView
                        android:id="@+id/fragment_main_title"
                        android:text="Kevin Wang"
                        android:textSize="35sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1.5"
                    android:layout_height="0dp">
                    <!--<TextView-->
                        <!--android:id="@+id/fragment_main_weight_label"-->
                        <!--android:layout_alignParentLeft="true"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:textSize="12sp"-->
                        <!--android:text="@string/weight_fragment_main"-->
                        <!--android:layout_height="wrap_content" />-->
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:orientation="horizontal"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/fragment_main_weight_label"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/main_fragment_weight_icon"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_weight="2"
                            android:layout_marginLeft="5dp"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/main_fragment_weight"
                            android:layout_width="0dp"
                            android:textSize="15sp"
                            android:text="133 BLS"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <!--<TextView-->
                            <!--android:layout_alignParentRight="true"-->
                            <!--android:layout_marginRight="15dp"-->
                            <!--android:layout_centerVertical="true"-->
                            <!--android:id="@+id/fragment_main_height"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:textSize="12sp"-->
                            <!--android:text="5'9'"-->
                            <!--android:layout_height="wrap_content" />-->

                        <ImageView
                            android:id="@+id/fragment_main_height_label"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/main_fragment_height_icon"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_toLeftOf="@id/fragment_main_height_label"
                            android:layout_marginRight="5dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:textSize="12sp"
                            android:text="5'9''"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_weight="1.6"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_marginLeft="15dp"
                android:id="@+id/fragment_main_calurio_fire"
                android:background="@drawable/circle_shape"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/main_fragment_calurio_fire_pic"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RelativeLayout>

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_height="0dp">
                    <LinearLayout
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:id="@+id/main_fragment_calories_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="144" />
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/calories_fragemtn_main"
                            />
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <LinearLayout
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="5dp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/main_activity_colaries_time"
                            android:text="00 : 30 : 23"
                            android:textSize="18sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:layout_height="0dp">
            <com.google.android.gms.maps.MapView
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragment_main_mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1.2"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/main_fragment_speed_icon"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:text="10"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/mh_fragment_main"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:src="@drawable/main_fragment_location_pic"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:text="3.6"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/mile_fragment_main"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:src="@drawable/main_fragment_heatsbeat_pic"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:text="60"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/bpm_fragment_main"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:src="@drawable/main_fragment_sweet_pic"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:text="1"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/ozhr_fragment_main"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:src="@drawable/main_fragment_thermometer_pic"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:text="60"
                    android:layout_height="0dp" />
                <TextView
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:text="@string/c_fragment_main"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_margin="10dp"
                android:background="@drawable/circle_corner_rectangle_green_shape"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/start_fragment_main"
                    android:textSize="15sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_margin="10dp"
                android:background="@drawable/circle_corner_rectangle_green_shape"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/reset_fragment_main"
                    android:textSize="15sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_margin="10dp"
                android:background="@drawable/circle_corner_rectangle_red_shape"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stop_fragment_main"
                    android:textSize="15sp"
                    />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
